feat: GET /search route
